@@ -2,6 +2,7 @@
 v7.0.0-git
 ----------
 
+[mms] Add ability to add email groups to the address book.
 [mms] Improved contacts loading - all contacts are never shown by default, but
       provide simple method for user to load all contacts.
 [mms] Add dynamically updating relative time display for messages in dynamic
